[package]
name = "fnv"
version = "1.0.7"
authors = ["The Rust Project Developers", "Alex Crichton <alex@alexcrichton.com>"]
description = "Fowler–Noll–Vo hash function"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/servo/rust-fnv"
documentation = "https://doc.servo.org/fnv/"

[lib]
name = "fnv"
path = "lib.rs"

[features]
default = ["std"]
std = []
